[package]
name = "careful_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "macros"] }

[build-dependencies]
syn = "1"